@@ -1,15 +1,11 @@
 package org.uma.jmetal.util.neighborhood.impl;
 
 import org.apache.commons.math3.ml.distance.EuclideanDistance;
-import org.uma.jmetal.util.JMetalException;
+import org.uma.jmetal.solution.Solution;
+import org.uma.jmetal.util.errorchecking.JMetalException;
 import org.uma.jmetal.util.neighborhood.Neighborhood;
 
-import java.io.BufferedReader;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
+import java.io.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.StringTokenizer;
@@ -19,19 +15,20 @@ import java.util.StringTokenizer;
  *
  * @author Antonio J. Nebro <antonio@lcc.uma.es>
  */
-public class WeightVectorNeighborhood<S> implements Neighborhood<S> {
+@SuppressWarnings("serial")
+public class WeightVectorNeighborhood<S extends Solution<?>> implements Neighborhood<S> {
   private int numberOfWeightVectors;
   private int weightVectorSize;
   private int[][] neighborhood;
   private double[][] weightVector;
-  private int neighborSize;
+  private int neighborhoodSize;
 
-  public WeightVectorNeighborhood(int numberOfWeightVectors, int neighborSize) {
+  public WeightVectorNeighborhood(int numberOfWeightVectors, int neighborhoodSize) {
     this.numberOfWeightVectors = numberOfWeightVectors;
     this.weightVectorSize = 2;
-    this.neighborSize = neighborSize;
+    this.neighborhoodSize = neighborhoodSize;
 
-    this.neighborhood = new int[numberOfWeightVectors][neighborSize];
+    this.neighborhood = new int[numberOfWeightVectors][neighborhoodSize];
     this.weightVector = new double[numberOfWeightVectors][weightVectorSize];
 
     for (int n = 0; n < numberOfWeightVectors; n++) {
@@ -43,30 +40,33 @@ public class WeightVectorNeighborhood<S> implements Neighborhood<S> {
     initializeNeighborhood();
   }
 
-  public WeightVectorNeighborhood(int numberOfWeightVectors, int weightVectorSize, int neighborSize, String vectorFileName) throws FileNotFoundException {
+  public WeightVectorNeighborhood(
+      int numberOfWeightVectors, int weightVectorSize, int neighborhoodSize, String vectorDirectoryName)
+      throws FileNotFoundException {
     this.numberOfWeightVectors = numberOfWeightVectors;
     this.weightVectorSize = weightVectorSize;
-    this.neighborSize = neighborSize;
+    this.neighborhoodSize = neighborhoodSize;
 
-    this.neighborhood = new int[numberOfWeightVectors][neighborSize];
+
+
+    this.neighborhood = new int[numberOfWeightVectors][neighborhoodSize];
     this.weightVector = new double[numberOfWeightVectors][weightVectorSize];
 
-    readWeightsFromFile(vectorFileName);
+    String weightVectorFileName = vectorDirectoryName + "/W"+weightVectorSize+"D_" + numberOfWeightVectors +".dat" ;
+    readWeightsFromFile(weightVectorFileName) ;
 
     initializeNeighborhood();
   }
 
   private void readWeightsFromFile(String vectorFileName) throws FileNotFoundException {
-    //try {
     InputStream inputStream;
     inputStream = getClass().getResourceAsStream(vectorFileName);
     if (null == inputStream) {
       inputStream = new FileInputStream(vectorFileName);
     }
     InputStreamReader isr = new InputStreamReader(inputStream);
-    BufferedReader br = new BufferedReader(isr);
 
-    try {
+    try (BufferedReader br = new BufferedReader(isr)) {
       int i = 0;
       int j;
       String aux = br.readLine();
@@ -74,19 +74,17 @@ public class WeightVectorNeighborhood<S> implements Neighborhood<S> {
         StringTokenizer st = new StringTokenizer(aux);
         j = 0;
         while (st.hasMoreTokens()) {
-          double value = new Double(st.nextToken());
+          double value = Double.valueOf(st.nextToken());
           weightVector[i][j] = value;
           j++;
         }
         aux = br.readLine();
         i++;
       }
-      br.close();
     } catch (IOException e) {
-      throw new JMetalException("readWeightsFromFile: failed when reading for file: "
-              + vectorFileName, e);
+      throw new JMetalException(
+          "readWeightsFromFile: failed when reading for file: " + vectorFileName, e);
     }
-
   }
 
   private void initializeNeighborhood() {
@@ -102,9 +100,9 @@ public class WeightVectorNeighborhood<S> implements Neighborhood<S> {
       }
 
       // find 'niche' nearest neighboring subproblems
-      minFastSort(x, idx, numberOfWeightVectors, neighborSize);
+      minFastSort(x, idx, numberOfWeightVectors, neighborhoodSize);
 
-      System.arraycopy(idx, 0, neighborhood[i], 0, neighborSize);
+      System.arraycopy(idx, 0, neighborhood[i], 0, neighborhoodSize);
     }
   }
 
@@ -149,7 +147,7 @@ public class WeightVectorNeighborhood<S> implements Neighborhood<S> {
     return weightVector;
   }
 
-  public int getNeighborSize() {
-    return neighborSize;
+  public int neighborhoodSize() {
+    return neighborhoodSize;
   }
 }
